# mco

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SKILL.md  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: benchmark.yml
docs/contracts/: provider-permissions-v0.1.x.md
docs/implementation/: step0-interface-freeze.md
runtime/: __init__.py  cli.py  config.py  contracts.py  diff_utils.py  errors.py  findings_cli.py  formatters.py  hooks.py  mcp_server.py  memory_cli.py  model_catalog.py  provider_identity.py  review_engine.py
scripts/: render_step5_report.py  run_capability_probes.sh  run_step5_parallel_benchmark.sh
tests/: test_acp_adapter.py  test_acp_cli.py  test_acp_client.py  test_acp_conformance.py  test_acp_handlers.py  test_acp_rendering.py  test_acp_transport.py  test_adapter_contracts.py  test_agent_registry.py  test_bridge_core.py  test_bridge_hash.py  test_chain_mode.py  test_ci_reporting_tools.py  test_classifier.py  test_cli.py  test_cli_doctor.py  test_cli_json_contract.py  test_cli_output_formats.py  test_codex_output_schema.py  test_cold_start.py  test_confidence.py  test_config.py  test_config_file.py  test_consensus_display.py  test_contract_freeze.py  test_correctness_fixes.py  test_custom_agent.py  test_diff_cli.py  test_diff_review_integration.py  test_diff_utils.py  test_divide_mode.py  test_evermemos_client.py  test_findings_cli.py  test_forget_cleaner.py  test_formatters.py  test_full_pipeline.py  test_hooks.py  test_mcp_data_layer.py  test_mcp_server.py  test_memory_cli.py  (+27 more)
(+52 files in other folders)
